package proxy;

public interface ITeacherDao {

    void teach();
}
