@startuml
'https://plantuml.com/class-diagram

interface ITeacherDao
class TeacherDao
class TeacherDaoProxy
class Client

class TeacherDao{
teach():void
}

interface ITeacherDao{
teach():void
}

TeacherDaoProxy ..|> ITeacherDao
TeacherDao ..|> ITeacherDao
TeacherDaoProxy o-- TeacherDao

Client ..> TeacherDaoProxy
Client ..> TeacherDao

@enduml